@@ -56,7 +56,7 @@ proc representCommand*(
         tasksResult.add "### "
         if task.important.get:
           tasksResult.add "!"
-        tasksResult.add fmt"{task.name} - {task.storyPoints.get}sp{task.energyBack.get}eb{taskDuration.inMinutes}min ({hr taskStart}-{hr timeEnd})" & "\l"
+        tasksResult.add fmt"{task.name} - {task.storyPoints.get}sp{task.satisfaction.get}sf{task.price.get.int}pr{taskDuration.inMinutes}min ({hr taskStart}-{hr timeEnd})" & "\l"
         tasksResult.add actionsResult
         time += toleranceBetweenTasks
       result.add "\l" & fmt"## {blk.name} ({hr blockStart}-{hr time})" & "\l"
