@@ -10,8 +10,13 @@ type
   RoutineConfig* {.sparse.} = object
     dayStart* {.defaultVal: "06:00".some.}: Option[string] = "06:00".some
     dayEnd* {.defaultVal: "22:00".some.}: Option[string] = "22:00".some
-    idealStoryPoints* {.defaultVal: 100.some.}: Option[int] = 100.some
     tolerance*: RoutineConfigTolerance
+    prerequisites*: RoutineConfigPrerequisites
+
+  RoutineConfigPrerequisites* {.sparse.} = object
+    maxStoryPoints* {.defaultVal: 100.some.}: Option[int] = 100.some
+    minSatisfaction*: Option[int]
+    minBalance*, minAverageHourPrice*, minBilled*, minBilledHours*: Option[float]
 
   RoutineConfigTolerance* {.sparse.} = object
     betweenBlocks* {.defaultVal: "0min".some.}: Option[string] = "0min".some
@@ -33,8 +38,8 @@ type
     name*: string
     timetome* {.defaultVal: "Other".some}: Option[string] = "Other".some
     important*: Option[bool]
-    storyPoints*: Option[int]
-    energyBack*: Option[int]
+    storyPoints*, satisfaction*: Option[int]
+    price*: Option[float]
     actions*: seq[RoutineBlockTaskAction]
 
   RoutineBlockTaskAction* = object
